--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "wysiwyg-text-editor-lexical",
+  "name": "up-editor-core",
   "version": "0.10.0",
   "private": true,
+  "type": "module",
+  "module": "dist/lib.es.js",
+  "main": "dist/lib.cjs.js",
+  "types": "dist/lib.d.ts",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
-    "build-prod": "vite build --config vite.prod.config.js",
-    "build-vercel": "(cd ../../ && node ./scripts/build.js --prod) && npm run build-prod",
-    "preview": "vite preview"
+    "build": "vite build"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.14.2",
@@ -32,15 +36,13 @@
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "lexical": "0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "katex": "^0.15.2",
+    "lexical": "0.10.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.263.1",
-    "prettier": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "prettier": "^2.8.8",
     "react-error-boundary": "^3.1.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
@@ -54,11 +56,17 @@
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
     "@types/lodash-es": "^4.14.182",
+    "@types/node": "^20.5.6",
+    "@types/react": "^18.2.21",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^2.8.0",
+    "typescript": "^5.2.2",
+    "vite": "^2.9.15",
+    "vite-plugin-dts": "^3.5.2",
     "vite-plugin-replace": "0.1.1"
   }
 }
