--- a/package.json
+++ b/package.json
@@ -32,16 +32,18 @@
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "lexical": "0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.1",
     "katex": "^0.15.2",
+    "lexical": "0.10.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.263.1",
     "prettier": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-router-dom": "^6.15.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "y-websocket": ">=1.3.x",
@@ -54,6 +56,7 @@
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
     "@types/lodash-es": "^4.14.182",
+    "@types/react": "^18.2.21",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
